    be garbage collected sooner (#1356, thanks to Kristian Lein-Mathisen)
  - On Cygwin and MinGW, the "build-platform" now corresponds to the
    tool chain used (gnu, clang, unknown) like on *nix, while the
    software-version is now "cygwin" or "mingw32" instead of "unknown".
    This also means the features list will now contain the tool chain
    on all platforms.

- Compiler
  - Fixed an off by one allocation problem in generated C code for (list ...).
  - The "-scrutinize" compiler option has been removed.
  - The "-module" compiler option (aliased as "-m") now expects a module name.
  - The generated C output of the compiler is now deterministic: it
    will be bit-for-bit identical when compiling the same Scheme file
    with the same version of the compiler.

- Tools
  - The new "-link" option to csc allows linking with objects from extensions.
  - The new "-libdir" option to csc allows overriding the runtime library
    directory.
  - The ambiguous "-l<libname>" option for csc has been removed (#1193).
  - Removed deprecated "-n" shorthand for "-emit-inline-file" from csc.
  - Removed "chicken-bug" tool.

- Core libraries
  - Removed support for memory-mapped files (posix), queues
    (data-structures), binary-search (data-structures), scan-input-lines
    (utils), group-information (posix) object-eviction (lolevel), and
    compile-file (utils). These are now available as eggs.
  - Removed the srfi-1, srfi-13, srfi-14, srfi-18, srfi-69, and utils
    units. These are now available as eggs.
  - Added the `executable-pathname` procedure for retrieving a path to
    the currently-running executable.
  - Removed all support for SWIG.
  - `sleep` now suspends the current thread when threading is enabled,
    otherwise it sleeps the process. The new `process-sleep` procedure
    in unit posix can be used to sleep the process unconditionally.
  - `with-error-output-to-port' from the ports module has been renamed